--- a/index.html
+++ b/index.html
@@ -5,10 +5,31 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
     <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="estilo.css">
     <meta charset="utf-8" />
   </head>
   <body>
+    <h1 class="titulo1">Bienvenido a Programaya</h1>
+    <div class="div1">
+        <p class="p1">En este momento nos encontramos organizando un evento para juntar a los mejores programadores del mundo</p>
+        <h2 class="titulo2">¿Te interesa participar?</h2>
+        <button class="btn1" onclick="inscribir()">Inscribirse</button>
+    </div>
+    <table class="tabla">
+        <tr>
+            <td>
+                <img src="img/descarga.jpg">
+            </td>
+            <td>
+                <img src="img/descarga1.jpg">
+            </td>
+            <td>
+                <img src="img/descarga2.jpg">
+            </td>
+                
+        </tr>
+    </table>
+    <script src="js.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
